fetch product card logic

--- a/src/app/components/pageNotFound/pageNotFound.component.html
+++ b/src/app/components/pageNotFound/pageNotFound.component.html
@@ -1,1 +1,11 @@
-<p>pageNotFound works!</p>,
+<div class="error-block">
+  <h2 class="error-message">Page Not Found</h2>
+  <div class="action-buttons">
+    <button mat-raised-button color="primary" (click)="goToLogin()">
+      Go to Login
+    </button>
+    <button mat-raised-button color="accent" (click)="goToProducts()">
+      Go to Products
+    </button>
+  </div>
+</div>
