--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,3 +20,7 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
   background-color: var(--color-background);
 }
+
+.wrapper {
+  padding: 20px;
+}
