--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -1,1 +1,32 @@
-login
+<div class="login-container wrapper">
+  <mat-card class="login-card">
+    <h1 class="title">Product Manager</h1>
+    <p class="instruction-text">
+      Please enter your authorization key to access the product manager.
+    </p>
+
+    <form>
+      <mat-form-field appearance="outline" class="full-width">
+        <mat-label>Authorization Key</mat-label>
+        <input
+          matInput
+          type="text"
+          required
+          [(ngModel)]="token"
+          name="authKey"
+        />
+      </mat-form-field>
+
+      <button
+        mat-raised-button
+        color="primary"
+        class="full-width"
+        type="submit"
+        [disabled]="token.trim().length === 0"
+        (click)="onLogin()"
+      >
+        Login
+      </button>
+    </form>
+  </mat-card>
+</div>
