--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,13 +1,15 @@
 <app-header></app-header>
 
 @if (isLoading ) {
-<p>Loading</p>
+<div class="loading-container"><mat-spinner diameter="40"></mat-spinner></div>
 } @else {
 <div class="product-list-container">
   @for ( product of products; track product) {
   <mat-card class="product-card">
     <mat-card-header>
-      <div mat-card-avatar class="product-avatar"></div>
+      <div mat-card-avatar class="product-avatar">
+        <span class="product-id">{{ product.id }}</span>
+      </div>
       <mat-card-title>{{ product.name }}</mat-card-title>
       <mat-card-subtitle>SKU: {{ product.sku }}</mat-card-subtitle>
     </mat-card-header>
@@ -32,6 +34,7 @@
         color="primary"
         (click)="onEditProduct(product)"
       >
+        <mat-icon>edit</mat-icon>
         Edit
       </button>
       <button
@@ -39,6 +42,7 @@
         color="warn"
         (click)="onDeleteProduct(product.id)"
       >
+        <mat-icon>delete</mat-icon>
         Delete
       </button>
     </mat-card-actions>
