--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -2,6 +2,7 @@
   <span>Product Manager</span>
   <span class="example-spacer"></span>
   <button mat-raised-button class="logout-button" (click)="onLogout()">
+    <mat-icon>exit_to_app</mat-icon>
     Logout
   </button>
 </mat-toolbar>
