--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,8 @@
   --color-text-secondary: #7D7D7D; // Secondary text color - used for less important text
   --color-error: #E57373; // Error color - used for displaying error messages
   --color-success: #4CAF50; // Success color - used for displaying success messages or confirmations
+
+  --color-hover-background: #f9f9f9;
 }
 
 html,
