add deleting functionality

--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -37,11 +37,7 @@
         <mat-icon>edit</mat-icon>
         Edit
       </button>
-      <button
-        mat-raised-button
-        color="warn"
-        (click)="onDeleteProduct(product.id)"
-      >
+      <button mat-raised-button color="warn" (click)="onDeleteProduct(product)">
         <mat-icon>delete</mat-icon>
         Delete
       </button>
