--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -9,6 +9,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
+  height: 100%;
+  gap: 10px;
 }
 
 .logout-button {
@@ -17,7 +20,11 @@
   cursor: pointer;
   transition: background-color 0.3s ease;
 
-  background-color: var(--color-error);
+  // background-color: var(--color-error);
   color: var(--color-background);
-  background-color: red;
+
+  &:hover {
+    background-color: var(--color-error);
+    color: var(--color-background);
+  }
 }
